fixing button align

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,12 @@ select {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
 }
 
+.header .form-group:last-child {
+  align-self: flex-end;
+  position: relative;
+  bottom: 2px;
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
